# coding-environment

./: README.md  tf-gpu-envronment.yml  vscode.txt  vscode_extentions.txt
apps/: fake-streaming-api.ipynb
apps/fast-api/api/: README.md  app.py
docker/: dbeaver.yml  mysql.yml  postgres.yml
documents/: TECHNICAL_DESIGN_DOCUMENT_TEMPLATE.md  technical_design_document.txt
makefile/: Makefile
tensorflow/: README.md  tf_helper_functions.py
virtual-env/: generate_requirements_from_pdm_toml.py
virtual-env/data-analysis/: pyproject.toml
virtual-env/kafka/: environment.yml  pyproject.toml
virtual-env/tf-gpu/: README.md  pyproject.toml
vs-code/: README.md  extensions.txt
